--- a/index.html
+++ b/index.html
@@ -1,16 +1,25 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>"Illini Rhythm Syndicate"</title>
+    <link rel="stylesheet" href="homepage.css">
+    <title>Illini Rhythm Syndicate</title>
 </head>
 <body>
-    <h1>IRS</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent dolor turpis, rhoncus a orci quis, aliquet facilisis leo. Nulla ultricies diam enim, ut sagittis nisl hendrerit sed. Nunc in velit orci. Proin euismod felis et sem lobortis, vel varius nunc lacinia. Nulla vitae libero mollis, ornare dolor quis, luctus quam</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent dolor turpis, rhoncus a orci quis, aliquet facilisis leo. Nulla ultricies diam enim, ut sagittis nisl hendrerit sed. Nunc in velit orci. Proin euismod felis et sem lobortis, vel varius nunc lacinia. Nulla vitae libero mollis, ornare dolor quis, luctus quam</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent dolor turpis, rhoncus a orci quis, aliquet facilisis leo. Nulla ultricies diam enim, ut sagittis nisl hendrerit sed. Nunc in velit orci. Proin euismod felis et sem lobortis, vel varius nunc lacinia. Nulla vitae libero mollis, ornare dolor quis, luctus quam</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent dolor turpis, rhoncus a orci quis, aliquet facilisis leo. Nulla ultricies diam enim, ut sagittis nisl hendrerit sed. Nunc in velit orci. Proin euismod felis et sem lobortis, vel varius nunc lacinia. Nulla vitae libero mollis, ornare dolor quis, luctus quam</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent dolor turpis, rhoncus a orci quis, aliquet facilisis leo. Nulla ultricies diam enim, ut sagittis nisl hendrerit sed. Nunc in velit orci. Proin euismod felis et sem lobortis, vel varius nunc lacinia. Nulla vitae libero mollis, ornare dolor quis, luctus quam</p>
-    
+    <nav class = "navbar">
+        <div class = "navdiv">
+            <div class = "logo"><a href = "#"><img src="images\irs-logo.png" width = 64px height = 64px></a></div>
+            <ul>
+                <li><a href="https://github.com/Illini-Rhythm-Syndicate" target="_blank" rel="noopener noreferrer" >GitHub</a></li>
+                <li><a href="https://discord.gg/WEYCkyG2" target="_blank" rel="noopener noreferrer" >Discord</a></li>
+            </ul>
+        </div>
+    </nav>
+    <div class="About Us">
+        <p>Welcome to the Illini Rhythm Syndicate webpage! We are a club dedicated to every rhythm game out there. Not only do we play rhythm games, we also build them.</p>
+        <br><br>
+        <p>Join the Discord to see the current projects we are working on!</p>
+    </div>
 </body>
 </html>
