--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@
         </div>
     </nav>
     <div class="About Us">
+        <div class = "grouppic"><a href = "#"><img src="images\main_pic.jpg" width = 800px height = auto></a></div>
+        <br><br>
         <p>Welcome to the Illini Rhythm Syndicate webpage! We are a club dedicated to every rhythm game out there. Not only do we play rhythm games, we also build them.</p>
         <br><br>
-        <p>Join the Discord to see the current projects we are working on!</p>
+        <p>Join the <a class = "inline links" href="https://discord.gg/WEYCkyG2" target="_blank" rel="noopener noreferrer" >Discord</a> to see the current projects we are working on!</p>
     </div>
 </body>
 </html>
